Fixed navbar z-index

--- a/style.css
+++ b/style.css
@@ -49,6 +49,7 @@ body {
    display: flex;
    flex-direction: row;
    box-shadow: 0 5px 15px var(--shadow);
+   z-index: 100;
 }
 
 #nav-items {
